--- a/app.json
+++ b/app.json
@@ -46,7 +46,7 @@
     },
     "plugins": [
       [
-        "expo-av",
+        "expo-audio",
         {
           "microphonePermission": "Allow Notes Tracker to access your microphone to record voice notes."
         }
