--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "expo": "~53.0.20",
-    "expo-av": "~15.1.7",
+    "expo-audio": "~0.4.9",
     "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
