--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/stack": "^7.4.7",
     "expo": "~53.0.20",
     "expo-audio": "~0.4.9",
+    "expo-document-picker": "^13.1.6",
     "expo-file-system": "^18.1.11",
     "expo-linear-gradient": "~14.1.5",
+    "expo-sharing": "^13.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
@@ -25,7 +27,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
