--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "Notes Tracker",
+    "name": "Thoughtloom AI",
     "slug": "notes-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/thoughtloom-icon.PNG",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -18,6 +18,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.tridentinnovation.notestracker",
+      "icon": "./assets/thoughtloom-icon.PNG",
       "infoPlist": {
         "NSMicrophoneUsageDescription": "This app needs access to the microphone to record voice notes.",
         "NSDocumentsFolderUsageDescription": "This app needs access to your documents folder to create and manage backups.",
