--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "notes-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/thoughtloom-icon.PNG",
+    "icon": "./assets/thoughtloom-icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -18,7 +18,6 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.tridentinnovation.notestracker",
-      "icon": "./assets/thoughtloom-icon.PNG",
       "infoPlist": {
         "NSMicrophoneUsageDescription": "This app needs access to the microphone to record voice notes.",
         "NSDocumentsFolderUsageDescription": "This app needs access to your documents folder to create and manage backups.",
