--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "notes-tracker",
-  "version": "1.0.0",
+  "name": "Thoughtloom AI",
+  "version": "1.0.1",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
