--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Thoughtloom AI",
     "slug": "notes-tracker",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/thoughtloom-icon.png",
     "userInterfaceStyle": "light",
@@ -37,6 +37,12 @@
             "NSUbiquitousContainerSupportedFolderLevels": "None"
           }
         },
+        "com.apple.developer.icloud-container-identifiers": [
+          "iCloud.com.tridentinnovation.notestracker"
+        ],
+        "com.apple.developer.icloud-services": [
+          "CloudKit"
+        ],
         "ITSAppUsesNonExemptEncryption": false
       }
     },
