--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Thoughtloom-AI",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
+    "cloudkit-js": "^0.0.8",
     "expo": "~53.0.20",
     "expo-audio": "~0.4.9",
     "expo-dev-client": "~5.2.4",
