--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "^0.79.5",
+    "react-native-cloudkit-storage": "^0.1.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
